2005-02-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-auto-save-file-modes): Set always
	permissions, because there might be an old auto-saved file
	belonging to another original file.  This could be a security
	threat.  Reported by Kjetil Kjernsmo <kjetil@kjernsmo.net>.

2005-02-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-smb.el (tramp-smb-prompt): Prompt can contain spaces
	inside directory names.
	(tramp-smb-handle-delete-directory, tramp-smb-handle-delete-file):
	No error message if DIRECTORY or FILENAME doesn't exist.

2005-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-set-auto-save-file-modes) Check for Emacs
	21.3.50 removed.

2005-02-09  Kim F. Storm  <storm@cua.dk>

	Change release version from 21.4 to 22.1 throughout.

2005-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (all): Change all addresses to .gnu.org.

2005-01-16  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.3 released.

	* tramp.el (TODO): Remove some items which are solved or obsolete.

2005-01-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-operation-not-permitted-regexp) New defcustom,
	catching keep-date problems in cp/scp operations.
	(tramp-handle-copy-file): Don't call `set-file-modes'
	unconditionally.  Specialized functions should know better what is
	necessary.  This improves performance a little bit, and the
	functions could catch errors with `cp -p' and `scp -p'.
	(tramp-do-copy-or-rename-file-via-buffer)
	(tramp-do-copy-or-rename-file-out-of-band): Call `set-file-modes'
	when appropriate.
	(tramp-do-copy-or-rename-file-directly): Mask `cp -p' error.  Call
	`set-file-modes' when appropriate.
	(tramp-action-out-of-band): Mask `scp -p' error.
	Reported by Isak Johnsson <isak@hypergene.com>.

2005-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (tramp-remap-command): New defun.
	(top): Remove `define-key' calls.  They are replaced by respective